[gd_scene load_steps=2 format=3 uid="uid://juy3mjxiyfxc"]

[ext_resource type="Script" uid="uid://dv7mvfmyw40al" path="res://back-sever/escenas/menu/main_menu.gd" id="1_sqxgi"]

[node name="todo_main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sqxgi")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.290989, 0.290259, 0.214567, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "prueba de distintos modos en godot "

[node name="texto_plano" type="Button" parent="."]
layout_mode = 0
offset_left = 137.0
offset_top = 127.0
offset_right = 317.0
offset_bottom = 158.0
text = "prueba en texto plano"

[node name="binarios" type="Button" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 87.0
offset_right = 254.0
offset_bottom = 118.0
text = "prueba de binarios"

[node name="salir" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 88.0
offset_right = 91.0
offset_bottom = 119.0
text = "quit"

[node name="prueba de bit" type="Button" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 124.0
offset_right = 132.0
offset_bottom = 155.0
text = "prueba_bit"

[node name="prueba_ram" type="Button" parent="."]
layout_mode = 0
offset_left = 265.0
offset_top = 85.0
offset_right = 367.0
offset_bottom = 116.0
text = "prueba_ram"

[node name="rsa" type="Button" parent="."]
layout_mode = 0
offset_left = 321.0
offset_top = 128.0
offset_right = 369.0
offset_bottom = 154.0
text = "rsa"

[connection signal="pressed" from="texto_plano" to="." method="_on_texto_plano_pressed"]
[connection signal="pressed" from="binarios" to="." method="_on_binarios_pressed"]
[connection signal="pressed" from="salir" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="prueba de bit" to="." method="_on_prueba_de_bit_pressed"]
[connection signal="pressed" from="prueba_ram" to="." method="_on_prueba_ram_pressed"]
[connection signal="pressed" from="rsa" to="." method="_on_rsa_pressed"]
